--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
             text-align: center;
             color: white;
             z-index: 1;
+            max-width: 90%; /* Máximo ancho del contenedor */
+            margin: auto; /* Centrar el contenedor */
         }
 
         p {
             font-size: 2rem;
+            margin-bottom: 2rem; /* Espacio inferior */
         }
 
         .opciones {
@@ -155,10 +158,12 @@
             z-index: 9999;
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
-            padding: 20px;
+            padding: 2rem; /* Espaciado interior */
             border-radius: 10px;
             text-align: center;
             display: none; /* Ocultar el mensaje inicialmente */
+            max-width: 90%; /* Máximo ancho del mensaje */
+            margin: auto; /* Centrar el mensaje */
         }
     </style>
 </head>
@@ -174,29 +179,12 @@
             <button id="siBtn"><span>Si</span></button>
             <button id="noBtn"><span>No</span></button>
         </div>
-        <div id="mensaje" class="musicBtns"> <!-- Agregamos la clase "musicBtns" para ocultarla inicialmente -->
+        <div id="mensaje" class="musicBtns">
             <button class="playBtn" data-src="Say Yes To Heaven.mp3" data-letra="   If you dance, I'll dance
             And if you don't, I'll dance anyway
             Give peace a chance
-            Let the fear you have fall away
-            I've got my eye on you
-            I've got my eye on you
-            Say yes to Heaven
-            Say yes to me
-            Say yes to Heaven
-            Say yes to me
-            If you go, I'll stay
-            You come back, I'll be right here
-            Like a barge at sea
-            In the storm, I stay clear
-            'Cause I've got my mind on you
-            I've got my mind on you
-            Say yes to Heaven
-            Say yes to me
-            Say yes to Heaven
-            Say yes to me"
+            Let the fear you have fall away"
             " data-imagen="Pareja.jpg"><span>Reproducir Mensaje (observa la parte superior derecha)</span></button>
-            <!-- Agregar más botones de música aquí -->
         </div>
         <div class="imagen-contenedor">
             <div class="imagen-circular">
@@ -331,6 +319,6 @@ function mostrarMensajeAgradecimiento() {
 
 // Añadimos un evento click al botón "Feliz 13 de abril ❤️"
 botonNuevo.addEventListener('click', mostrarMensajeAgradecimiento);
-    </script>            
+    </script>         
 </body>
 </html>
