--- a/index.html
+++ b/index.html
@@ -180,10 +180,26 @@
             <button id="noBtn"><span>No</span></button>
         </div>
         <div id="mensaje" class="musicBtns">
-            <button class="playBtn" data-src="Say Yes To Heaven.mp3" data-letra="   If you dance, I'll dance
+            <button class="playBtn" data-src="Say Yes To Heaven.mp3" data-letra="    If you dance, I'll dance
             And if you don't, I'll dance anyway
             Give peace a chance
-            Let the fear you have fall away"
+            Let the fear you have fall away
+            I've got my eye on you
+            I've got my eye on you
+            Say yes to Heaven
+            Say yes to me
+            Say yes to Heaven
+            Say yes to me
+            If you go, I'll stay
+            You come back, I'll be right here
+            Like a barge at sea
+            In the storm, I stay clear
+            'Cause I've got my mind on you
+            I've got my mind on you
+            Say yes to Heaven
+            Say yes to me
+            Say yes to Heaven
+            Say yes to me"
             " data-imagen="Pareja.jpg"><span>Reproducir Mensaje (observa la parte superior derecha)</span></button>
         </div>
         <div class="imagen-contenedor">
